--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==1.0.2
 graphene==2.1.3
+Flask-GraphQL==2.0.0
+graphene-sqlalchemy==2.1.1
 SQLAlchemy==1.3.3
 flask-sqlalchemy==2.3.2
 flask-script==2.0.6
